updated the text

--- a/welcome.html
+++ b/welcome.html
@@ -6,7 +6,7 @@
     <title>Welcome</title>
 </head>
 <body>
-   <h1 styles="color: red;">hello developers, Welcome to this Github repository</h1>
+   <h1 styles="color: red;">hello developers, Welcome to this Github repository nelly I just made a change</h1>
 </body>
 </html>
 
